# team-nust-robocup-v2

./: CMakeLists.txt  CodeFormatting.txt  LICENSE.txt  Makefile  Makefile~  README.md  doxygen-config  qiproject.xml  team-nust-robocup-qt.config  team-nust-robocup-qt.creator.user.1.3  team-nust-robocup-qt.creator.user.7f54c8c  team-nust-robocup-qt.creator.user.fc1409a  team-nust-robocup-qt.files  team-nust-robocup-qt.includes
resources/CameraCalibrator/: CMakeLists.txt  CMakeLists.txt~  calibrate-camera.sh  calibrate-camera.sh~
resources/CameraCalibrator/Src/: CameraCalibrator.cpp
resources/CameraCalibrator/src/: CameraCalibrator.cpp
resources/RandomLib/: CMakeLists.txt  Makefile  cmake_install.cmake  qiproject.xml
resources/RandomLib/.qi/: path.conf
resources/RandomLib/include/: DiscreteNormal.hpp  DiscreteNormalAlt.hpp  ExactExponential.hpp  ExactNormal.hpp  ExactPower.hpp  ExponentialDistribution.hpp  ExponentialProb.hpp  InverseEProb.hpp  InversePiProb.hpp  LeadingZeros.hpp  MPFRExponential.hpp  MPFRExponentialL.hpp  MPFRNormal.hpp  MPFRNormalK.hpp  MPFRNormalR.hpp  MPFRRandom.hpp  MPFRUniform.hpp  NormalDistribution.hpp  Random.hpp  RandomAlgorithm.hpp  RandomCanonical.hpp  RandomEngine.hpp  RandomMixer.hpp  RandomNumber.hpp  RandomPower2.hpp  RandomSeed.hpp  RandomSelect.hpp  RandomType.hpp  UniformInteger.hpp
resources/RandomLib/nbproject/: configurations.xml  project.xml
resources/RandomLib/nbproject/private/: CodeAssistancePathMapper.properties  Remote-Release.properties  configurations.xml
resources/RandomLib/src/: Random.cpp
resources/RandomLib/tests/: test.cpp
resources/SbplLib/: CMakeLists.txt  qiproject.xml
resources/SbplLib/.qi/: path.conf
resources/SbplLib/include/: headers.h  sbpl_exception.h
resources/SbplLib/include/discrete_space_information/: environment.h  environment_XXX.h  environment_nav2D.h  environment_nav2Duu.h  environment_navxythetalat.h  environment_navxythetamlevlat.h  environment_precomputed_adjacency_list.h  environment_robarm.h
resources/SbplLib/include/heuristics/: embedded_heuristic.h  heuristic.h
resources/SbplLib/include/planners/: ANAplanner.h  adplanner.h  araplanner.h  lazyARA.h  mhaplanner.h  planner.h  ppcpplanner.h  rstarplanner.h  viplanner.h
resources/SbplLib/include/utils/: 2Dgridsearch.h  heap.h  list.h  mdp.h  sbpl_bfs_2d.h  sbpl_bfs_3d.h
resources/SbplLib/src/discrete_space_information/: environment_XXX.cpp  environment_nav2D.cpp  environment_nav2Duu.cpp  environment_navxythetalat.cpp  (+2 more)
resources/vrep-naoqi-simulation-priv/: CMakeLists.txt  README.md
resources/vrep-naoqi-simulation-priv/include/: ActuatorInterface.h  ArgParser.h  CameraInterface.h  FsrInterface.h  ImuInterface.h  Interface.h  JointActuatorInterface.h  JointInterface.h  SensorInterface.h  SensorKeys.h
resources/vrep-naoqi-simulation-priv/scenes/: simple_nao.ttt  single_robocup.ttt  v50_dynamic.ttt  v50_with_joints_playback.ttt
resources/vrep-naoqi-simulation-priv/scripts/: CMakeCache.txt  make  run_simulation.sh  setup_interface.sh  simulated_nao.sh
resources/vrep-naoqi-simulation-priv/src/: Interface.cpp  main.cpp
src/BehaviorManager/: CMakeLists.txt  Makefile  qiproject.xml
src/BehaviorManager/.qi/: path.conf
src/BehaviorManager/include/: Behavior.h  BehaviorManager.h  BehaviorRequest.h  StateMachine.h  StateMachineMacros.h
src/BehaviorManager/nbproject/: configurations.xml  project.xml
src/BehaviorManager/src/: Behavior.cpp  BehaviorManager.cpp
src/BehaviorManager/tests/: behavior_manager_test.cpp
src/TNRSBase/: .cproject  .project  CMakeLists.txt  Makefile  qiproject.xml
src/TNRSBase/.qi/: path.conf
src/TNRSBase/include/: BaseIncludes.h  BaseModule.h  BaseModuleHandler.h  ConnectorMacro.h  DebugBase.h  DebugMacros.h  InoutConnectors.h  MemoryBase.h  MemoryConnector.h  MemoryDefinition.h  MemoryIOMacros.h  MemoryVariable.h  ModuleRequest.h  ModuleRequestMacros.h  SharedMemory.h
src/TNRSBase/nbproject/: configurations.xml  project.xml
src/TNRSBase/src/: BaseModule.cpp  DebugBase.cpp  MemoryBase.cpp  MemoryBase.cpp.autosave  MemoryConnector.cpp  ModuleRequest.cpp  SharedMemory.cpp
src/TNRSBase/tests/: debug_init.cpp  memory_init.cpp
src/TNRSModules/ControlModule/: CMakeLists.txt  Makefile  qiproject.xml
src/TNRSModules/GBModule/: CMakeLists.txt  qiproject.xml
src/TNRSModules/GameCommModule/: CMakeLists.txt  qiproject.xml
src/TNRSModules/LocalizationModule/: CMakeLists.txt  Makefile  qiproject.xml
src/TNRSModules/MotionModule/: CMakeLists.txt  Makefile  qiproject.xml
src/TNRSModules/PlanningModule/: CMakeLists.txt  Makefile  qiproject.xml
src/TNRSModules/SBModule/: CMakeLists.txt  Makefile  qiproject.xml
src/TNRSModules/UserCommModule/: CMakeLists.txt  Makefile  qiproject.xml
src/TNRSModules/VisionModule/: CMakeLists.txt  Makefile  qiproject.xml
src/TeamNUSTSPL/: CMakeLists.txt  Makefile  qiproject.xml
src/TeamNUSTSPL/.qi/: path.conf
src/TeamNUSTSPL/include/: TNSPLModuleIds.h  TeamNUSTSPL.h
src/TeamNUSTSPL/nbproject/: configurations.xml  project.xml
src/TeamNUSTSPL/src/: TeamNUSTSPL.cpp  main.cpp
src/Utils/: CMakeLists.txt  Makefile  qiproject.xml
src/Utils/.qi/: path.conf  worktree.xml
src/Utils/include/: AngleDefinitions.h  ArgParseUtils.h  ConfigMacros.h  ConfigManager.h  Constants.h  DataUtils.h  DebugUtils.h  EnumUtils.h  FileUtils.h  GnuPlot.h  GnuPlotDefinitions.h  HardwareIds.h  JsonLogger.h  JsonUtils.h  MathsUtils.h  PIDController.h  PlotEnv.h  PotentialField2D.h  PrintUtils.h  StringEnum.h  SwitchRequest.h  TNColors.h  TNRSLine.h  TNRSPoint.h  TeamPositions.h  ThreadSafeQueue.h  VariadicMacros.h  VisionUtils.h  ZLIBCompression.h  alvisiondefinitions.h
src/Utils/nbproject/: configurations.xml  project.xml
src/Utils/src/: ArgParseUtils.cpp  ConfigManager.cpp  DataUtils.cpp  FileUtils.cpp  GnuPlot.cpp  HardwareIds.cpp  JsonUtils.cpp  MathsUtils.cpp  PotentialField2D.cpp  PrintUtils.cpp  TNRSLine.cpp  VisionUtils.cpp
src/Utils/tests/: DataHoldersTest.cpp  HardwareIdsTest.cpp  ImuCalibration.cpp  KalmanFilterTest.cpp  PlotEnvTests.cpp  ProcessModelTest.cpp
(+1467 files in other folders)
