
# General parameters
cmake_minimum_required(VERSION 2.8.12)
project (team-nust-spl)

find_package(qibuild)

include($ENV{PATH_TO_TEAM_NUST_DIR}/make/cmake/common.cmake)
include_directories($ENV{PATH_TO_TEAM_NUST_DIR}/resources)
include_directories($ENV{PATH_TO_TEAM_NUST_DIR}/resources/jsoncpp/include)
include_directories($ENV{PATH_TO_TEAM_NUST_DIR}/resources/nlopt/api)
include_directories($ENV{PATH_TO_TEAM_NUST_DIR}/resources/fftw3/api)
include_directories($ENV{PATH_TO_TEAM_NUST_DIR}/resources/qpOASES/include)
include_directories($ENV{PATH_TO_TEAM_NUST_DIR}/resources/msgpack/include)

#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/resources/fftw3)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/resources/jsoncpp)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/resources/nlopt)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/resources/qpOASES)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/resources/RandomLib)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/resources/SbplLib)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/Utils)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TNRSBase)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/BehaviorManager)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TNRSModules/GameCommModule)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TNRSModules/UserCommModule)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TNRSModules/ControlModule)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TNRSModules/GBModule)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TNRSModules/MotionModule)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TNRSModules/PlanningModule)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TNRSModules/VisionModule)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TNRSModules/LocalizationModule)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/TeamNUSTSPL)
